k8s/SubRedditapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subredditapi
  labels:
    app: subredditapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subredditapi
  template:
    metadata:
      labels:
        app: subredditapi
    spec:
      containers:
        - name: userapi
          image: lucvdzandt/subredditapi:latest
          ports:
            - containerPort: 8086
