k8s/SubRedditapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subredditapi-service
spec:
  type: NodePort
  selector:
    app: subredditapi
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
