k8s/SubRedditapi/sqldeployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: subredditmysql
spec:
  selector:
    matchLabels:
      app: subredditmysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: subredditmysql
    spec:
      containers:
        - image: mysql:5.6
          name: subredditmysql
          ports:
            - containerPort: 3307
              name: subredditmysql
          volumeMounts:
            - name: subredditmysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: subredditmysql-persistent-storage
          persistentVolumeClaim:
            claimName: subredditmysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: subredditmysql
spec:
  type: NodePort
  selector:
    app: subredditmysql
  ports:
    - port: 3307
      targetPort: 3307
      nodePort: 30004
---
