k8s/SubRedditapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subredditapi-ingress
spec:
  defaultBackend:
    service:
      name: subredditapi-service
      port:
        number: 8086
